# clacks

./: .gitignore  Makefile  README.md  check_repository_unchanged.sh  clacks.FCStd
.github/workflows/: ci.yml
clacks-backend/: Cargo.toml  Cross.toml  Makefile  local_config.toml
clacks-backend/src/: config.rs  errors.rs  fixtures.rs  lib.rs
clacks-backend/src/adapters/: mod.rs  raspberrypi.rs
clacks-backend/src/adapters/shutters/: mod.rs
clacks-backend/src/adapters/testdata/: config.toml
clacks-backend/src/app/: add_message_to_queue.rs  get_config.rs  get_state.rs  mod.rs  update_clacks.rs
clacks-backend/src/domain/: mod.rs  servos.rs  time.rs
clacks-backend/src/ports/: http.rs  mod.rs  timers.rs
clacks-frontend/: .eslintrc.js  Dockerfile  README.md  package.json  vue.config.js
clacks-frontend/public/: index.html
clacks-frontend/src/: App.vue  api.ts  types.ts  variables.scss
clacks-frontend/src/components/: CurrentMessagePreview.vue  LoadingIndicator.vue  MessagePartPreview.vue  ShutterPreview.vue  ShuttersPreview.vue
clacks-frontend/src/router/: index.ts
clacks-frontend/src/store/: index.ts
clacks-frontend/src/views/: HomeView.vue  PosterView.vue
clacks-macros/: Cargo.toml
clacks-macros/src/: lib.rs
led-controller/: led-controller.ino
