[package]
name = "clacks-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
thiserror = "2.0.17"
clacks-macros = { path = "../clacks-macros" }
chrono = "0.4.42"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
clap = "4.5.52"
env_logger = "0.11.8"
http = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
prometheus = "0.14.0"
axum = "0.8.7"
include_dir = "0.7.4"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
